--- a/memequeen.html
+++ b/memequeen.html
@@ -13,7 +13,6 @@
     }
 
     body {
-      background: #f5f5f7;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       line-height: 1.5;
       font-weight: 400;
@@ -26,6 +25,7 @@
       align-items: center;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
+      background-color: #f5f5f7; /* fallback */
     }
 
     /* main full‑width container */
@@ -45,11 +45,11 @@
       box-shadow: 0 20px 40px -12px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0,0,0,0.02);
     }
 
-    /* ---------- NAVIGATION (full‑width glass) ---------- */
+    /* ---------- NAVIGATION ---------- */
     .nav-bar {
       width: 100%;
       border-radius: 0 0 2rem 2rem;
-      padding: 1rem 2rem;
+      padding: 0.8rem 2rem;
       margin-bottom: 2rem;
       display: flex;
       align-items: center;
@@ -61,9 +61,22 @@
       border-bottom: 1px solid rgba(255,255,255,0.8);
     }
 
-    .logo {
+    .logo-container {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .logo-image {
+      height: 42px;
+      width: auto;
+      border-radius: 10px;
+      object-fit: contain;
+    }
+
+    .logo-text {
       font-weight: 600;
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       letter-spacing: -0.02em;
       color: #1d1c1f;
     }
@@ -85,39 +98,54 @@
       color: #000;
     }
 
-    /* ---------- HERO SECTION (full‑width glass) ---------- */
+    /* ---------- HERO WITH BACKGROUND IMAGE ---------- */
     .hero {
       width: 100%;
       border-radius: 2.5rem;
-      padding: 4rem 3rem;
+      padding: 5rem 3rem;
       margin-bottom: 2.5rem;
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
-      background: rgba(255,255,255,0.6);
-      backdrop-filter: blur(16px);
-      -webkit-backdrop-filter: blur(16px);
+      position: relative;
+      background-image: url('src/asset/herobg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      isolation: isolate;
+    }
+
+    /* dark overlay for readability (optional but keeps text crisp) */
+    .hero::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.15);
+      border-radius: 2.5rem;
+      z-index: -1;
     }
 
     .hero h1 {
       font-size: 4rem;
       font-weight: 700;
       letter-spacing: -0.03em;
-      color: #1d1c1f;
+      color: white;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.3);
       margin-bottom: 1rem;
       line-height: 1.1;
     }
 
     .hero p {
       font-size: 1.5rem;
-      color: #4a4a50;
+      color: rgba(255,255,255,0.95);
+      text-shadow: 0 2px 6px rgba(0,0,0,0.3);
       max-width: 700px;
       margin-bottom: 2rem;
-      font-weight: 370;
+      font-weight: 400;
     }
 
-    /* gate inside hero (lunch question) */
+    /* gate inside hero */
     .gate-hero {
       margin-top: 1.2rem;
       width: 100%;
@@ -130,7 +158,8 @@
     .gate-hero h2 {
       font-size: 2rem;
       font-weight: 500;
-      color: #2c2c2e;
+      color: white;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.4);
     }
 
     .button-group {
@@ -149,17 +178,21 @@
       font-size: 1.6rem;
       font-weight: 500;
       color: #1d1c1f;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.05), 0 0 0 1px rgba(0,0,0,0.02);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.1), 0 0 0 1px rgba(0,0,0,0.02);
       cursor: pointer;
-      transition: all 0.2s cubic-bezier(0.2, 0.9, 0.4, 1);
+      transition: transform 0.1s ease, box-shadow 0.2s;
       border: 1px solid rgba(255,255,255,0.8);
       min-width: 180px;
     }
 
+    .btn-yes {
+      background: white;
+      transform-origin: center;
+    }
+
     .btn-yes--enlarged {
-      transform: scale(1.3);
-      background: #ffffff;
-      box-shadow: 0 20px 32px -10px rgba(0,0,0,0.2);
+      transform: scale(1.4);
+      box-shadow: 0 24px 36px -12px rgba(0,0,0,0.25);
       font-weight: 600;
       border-color: #b0b0ba;
     }
@@ -179,7 +212,7 @@
       pointer-events: auto;
     }
 
-    /* ---------- ABOUT SECTION (dedicated) ---------- */
+    /* ---------- ABOUT SECTION ---------- */
     .about-section {
       width: 100%;
       border-radius: 2.5rem;
@@ -205,10 +238,6 @@
       margin-bottom: 1.2rem;
       line-height: 1.6;
       font-weight: 370;
-    }
-
-    .about-text p:last-child {
-      margin-bottom: 0;
     }
 
     /* ---------- FEATURE / QUEEN GALLERY ---------- */
@@ -372,21 +401,26 @@
       font-size: 1rem;
     }
 
-    /* responsive touches */
+    /* responsive */
     @media (max-width: 680px) {
       .hero h1 { font-size: 3rem; }
       .hero p { font-size: 1.2rem; }
       .btn { font-size: 1.3rem; padding: 0.8rem 2rem; min-width: 140px; }
       .nav-links { gap: 1.2rem; font-size: 1rem; }
+      .logo-text { font-size: 1.2rem; }
     }
   </style>
 </head>
 <body>
   <div class="queen-experience">
 
-    <!-- PROFESSIONAL NAVIGATION -->
+    <!-- NAVIGATION WITH LOGO (src/asset/memequeen logo.jpg) -->
     <nav class="nav-bar glass">
-      <span class="logo">👑 memequeen</span>
+      <div class="logo-container">
+        <img src="src/asset/memequeen logo.jpg" alt="Meme Queen logo" class="logo-image" 
+             onerror="this.onerror=null; this.style.display='none';">
+        <span class="logo-text">memequeen</span>
+      </div>
       <div class="nav-links">
         <a href="#">home</a>
         <a href="#about">about</a>
@@ -395,8 +429,9 @@
       </div>
     </nav>
 
-    <!-- HERO SECTION with lunch gate -->
-    <div class="hero glass" id="hero">
+    <!-- HERO WITH BACKGROUND IMAGE (src/asset/herobg.jpg) -->
+    <div class="hero" id="hero" style="background-image: url('src/asset/herobg.jpg');">
+      <!-- overlay is done via ::before, no extra markup -->
       <h1>the meme queen</h1>
       <p>University of Ghana · 2025 · triple threat</p>
       
@@ -413,17 +448,17 @@
     <!-- MAIN CONTENT (hidden until Yes) -->
     <div class="main-content" id="mainQueenContent">
 
-      <!-- DEDICATED ABOUT SECTION (anchor #about) -->
+      <!-- DEDICATED ABOUT SECTION -->
       <section id="about" class="about-section glass">
         <h2>So, this girl.</h2>
         <div class="about-text">
-          <p>She graduated from University of Ghana in 2025 look at her go. She's out here being a triple threat: event organiser (arranging happiness for everyone else), make-up artist (painting a masterpiece daily that no man appreciates), and event usher (professionally trained to guide couples to their seats. Couples!). She is literally working every angle to be around people and love, yet here we are.</p>
+          <p>She graduated from University of Ghana in 2026—look at her go. She's out here being a triple threat: event organiser (arranging happiness for everyone else), make-up artist (painting a masterpiece daily that no man appreciates), and event usher (professionally trained to guide couples to their seats. Couples!). She is literally working every angle to be around people and love, yet here we are.</p>
           <p>She can cook. Like, actually cook. Full meals. For one. She draws when bored probably sketches of the husband she's still waiting for. And her stress relief? A solo trip to the beach. Just her, the sand, and the crushing realisation that everyone around her is coupled up.</p>
-          <p>Her coping mechanism? Memes. She's the so-called 'Meme Queen.' You know what they say: if you're the Meme Queen, you're probably the one sending memes to your group chat at 10 PM on a Saturday because you have absolutely nothing else going on. The crown is heavy, but so is the single life. She's not lonely, she's just... the entertainment committee for everyone else's relationships.</p>
+          <p>Her coping mechanism? Memes. She's the so called 'Meme Queen.' You know what they say: if you're the Meme Queen, you're probably the one sending memes to your group chat at 10 PM on a Saturday because you have absolutely nothing else going on. The crown is heavy, but so is the single life. She's not lonely, she's just... the entertainment committee for everyone else's relationships.</p>
         </div>
       </section>
 
-      <!-- FEATURED QUEEN (gallery anchor) -->
+      <!-- FEATURED QUEEN -->
       <section id="gallery" class="feature-grid">
         <div class="feature-card glass">
           <div class="feature-label">👑 the queen herself</div>
@@ -432,11 +467,11 @@
                  onerror="this.onerror=null; this.style.display='none'; this.parentNode.appendChild(createFallback('queen I'));">
           </div>
           <div class="queen-title" id="mainQueenTitle">memequeen I</div>
-          <div class="queen-sub" id="mainQueenSub">original · 2025</div>
+          <div class="queen-sub" id="mainQueenSub">original · 2026</div>
         </div>
       </section>
 
-      <!-- MORE MEMES (anchor #memes) -->
+      <!-- MORE MEMES -->
       <section id="memes" class="memes-section">
         <div class="section-header">
           <h3>more memes</h3>
@@ -452,26 +487,26 @@
             <p>memequeen II</p>
             <span>alternate</span>
           </div>
-          <!-- additional memes (clean) -->
+          <!-- additional memes -->
           <div class="meme-thumb-card">
             <div class="thumb-image placeholder-fallback">🎭</div>
             <p>the stare</p>
-            <span>2024</span>
+            <span>2026</span>
           </div>
           <div class="meme-thumb-card">
             <div class="thumb-image placeholder-fallback">🫥</div>
             <p>silent laugh</p>
-            <span>2024</span>
+            <span>2026</span>
           </div>
           <div class="meme-thumb-card">
             <div class="thumb-image placeholder-fallback">🪄</div>
             <p>vanish mode</p>
-            <span>2023</span>
+            <span>2026</span>
           </div>
           <div class="meme-thumb-card">
             <div class="thumb-image placeholder-fallback">🪷</div>
             <p>zen meme</p>
-            <span>2025</span>
+            <span>2026</span>
           </div>
         </div>
       </section>
@@ -485,7 +520,7 @@
 
   <script>
     (function() {
-      // helper: fallback for missing images
+      // helper for image fallbacks
       window.createFallback = function(text) {
         const div = document.createElement('div');
         div.className = 'placeholder-fallback';
@@ -493,27 +528,65 @@
         return div;
       };
 
-      // gate logic
+      // ----- GATE LOGIC: press and hold No makes Yes bigger; Yes reveals and removes gate -----
       const yesBtn = document.getElementById('yesBtn');
       const noBtn = document.getElementById('noBtn');
       const mainContent = document.getElementById('mainQueenContent');
+      const gateHero = document.querySelector('.gate-hero'); // the whole question block
 
+      // initially hide main content
       mainContent.classList.remove('reveal');
 
+      // Variable to track hold interval
+      let holdInterval = null;
+
+      // Function to enlarge Yes button
+      function startEnlarging() {
+        if (holdInterval) return; // already holding
+        holdInterval = setInterval(() => {
+          yesBtn.classList.add('btn-yes--enlarged');
+        }, 50); // continuously pressed -> stays enlarged
+      }
+
+      // Function to stop enlarging and remove class if not needed (but we'll keep as is, No release stops adding new classes)
+      function stopEnlarging() {
+        if (holdInterval) {
+          clearInterval(holdInterval);
+          holdInterval = null;
+        }
+        // but we do NOT remove the enlarged class here — it stays until Yes is clicked.
+      }
+
+      // No button: start enlarging on mousedown / touchstart, stop on mouseup / touchend / mouseleave
+      noBtn.addEventListener('mousedown', startEnlarging);
+      noBtn.addEventListener('touchstart', startEnlarging);
+
+      noBtn.addEventListener('mouseup', stopEnlarging);
+      noBtn.addEventListener('touchend', stopEnlarging);
+      noBtn.addEventListener('mouseleave', stopEnlarging); // in case they drag away
+
+      // Yes button click: reveal main content, remove gate, reset Yes size
       yesBtn.addEventListener('click', function() {
         mainContent.classList.add('reveal');
+        // Remove the gate (lunch question) entirely
+        if (gateHero) {
+          gateHero.style.display = 'none';
+        }
+        // Reset Yes button size
         yesBtn.classList.remove('btn-yes--enlarged');
-        // smooth scroll to about after reveal
+        // stop any ongoing hold interval
+        stopEnlarging();
+        
+        // smooth scroll to about
         setTimeout(() => {
           document.getElementById('about').scrollIntoView({ behavior: 'smooth', block: 'start' });
         }, 200);
       });
 
-      noBtn.addEventListener('click', function() {
-        yesBtn.classList.add('btn-yes--enlarged');
-      });
+      // ensure if hold was active and then Yes clicked, intervals cleared
+      // (already inside yes click we call stopEnlarging)
 
-      // toggle queen images on main image click
+      // ----- toggle queen images on main image click -----
       const mainImg = document.getElementById('mainQueenImg');
       const mainTitle = document.getElementById('mainQueenTitle');
       const mainSub = document.getElementById('mainQueenSub');
@@ -525,11 +598,11 @@
           if (currentSrc && currentSrc.includes('meme queen1.jpg')) {
             mainImg.src = 'src/asset/meme queen2.jpg';
             mainTitle.innerText = 'memequeen II';
-            mainSub.innerText = 'alternate · 2025';
+            mainSub.innerText = 'alternate · 2026';
           } else {
             mainImg.src = 'src/asset/meme queen1.jpg';
             mainTitle.innerText = 'memequeen I';
-            mainSub.innerText = 'original · 2025';
+            mainSub.innerText = 'original · 2026';
           }
           const container = document.getElementById('mainImageContainer');
           const existingFallback = container.querySelector('.placeholder-fallback');
@@ -544,8 +617,8 @@
         queen2Card.addEventListener('click', function() {
           if (mainImg) {
             mainImg.src = 'src/asset/meme queen2.jpg';
-            mainTitle.innerText = 'memequeen ';
-            mainSub.innerText = 'alternate · 2025';
+            mainTitle.innerText = 'memequeen II';
+            mainSub.innerText = 'alternate · 2026';
             mainImg.style.display = 'block';
             const container = document.getElementById('mainImageContainer');
             const existingFallback = container.querySelector('.placeholder-fallback');
