Fix typo in about section of memequeen.html

--- a/memequeen.html
+++ b/memequeen.html
@@ -452,7 +452,7 @@
       <section id="about" class="about-section glass">
         <h2>So, this girl.</h2>
         <div class="about-text">
-          <p>She graduated from University of Ghana in 2026—look at her go. She's out here being a triple threat: event organiser (arranging happiness for everyone else), make-up artist (painting a masterpiece daily that no man appreciates), and event usher (professionally trained to guide couples to their seats. Couples!). She is literally working every angle to be around people and love, yet here we are.</p>
+          <p>She graduated from University of Ghana in 2026 look at her go. She's out here being a triple threat: event organiser (arranging happiness for everyone else), make-up artist (painting a masterpiece daily that no man appreciates), and event usher (professionally trained to guide couples to their seats. Couples!). She is literally working every angle to be around people and love, yet here we are.</p>
           <p>She can cook. Like, actually cook. Full meals. For one. She draws when bored probably sketches of the husband she's still waiting for. And her stress relief? A solo trip to the beach. Just her, the sand, and the crushing realisation that everyone around her is coupled up.</p>
           <p>Her coping mechanism? Memes. She's the so called 'Meme Queen.' You know what they say: if you're the Meme Queen, you're probably the one sending memes to your group chat at 10 PM on a Saturday because you have absolutely nothing else going on. The crown is heavy, but so is the single life. She's not lonely, she's just... the entertainment committee for everyone else's relationships.</p>
         </div>
